@@ -9,7 +9,6 @@ buildscript {
         classpath 'org.akhikhl.gretty:gretty:1.2.0'
         classpath 'se.inera.intyg:gradle-fitnesse-plugin:1.0-SNAPSHOT'
     }
-    def gebEnv = (System.getProperty("geb.env")) ? (System.getProperty("geb.env")) : "firefox"
 }
 
 description = 'Inera Privatläkarportal Fitnesse specifications'
@@ -21,34 +20,7 @@ fitnesse {
     port = 9125
     root = "FitNesseRoot"
     workingDir = "src/test/fitnesse"
-}
-
-if (project.hasProperty('runFitnesse')) {
-    apply plugin: 'org.akhikhl.gretty'
-    gretty {
-        contextPath = '/'
-        contextConfigFile = project(":privatlakarportal-web").projectDir.path + "/src/main/webapp/WEB-INF/jetty-context.xml"
-        logbackConfigFile = "${projectDir}/src/main/resources/logback-test.xml"
-
-       
-        jvmArgs = [
-            '-Dspring.profiles.active=local',
-            '-XX:MaxPermSize=256M',
-        ]
-    }
-
-    farm {
-        webapp ":privatlakarportal-web"
-        webapp project
-        integrationTestTask = 'fitnesseTest'
-    }
-
-    dependencies {
-        gretty "com.h2database:h2:1.3.171"
-        gretty "mysql:mysql-connector-java:5.1.29"
-        gretty "org.apache.activemq:activemq-broker:5.8.0"
-        gretty "org.apache.tomcat:tomcat-catalina:7.0.20"
-    }
+    extraProperties = [baseUrl: baseUrl] 
 }
 
 dependencies {
